Fixed location being an object instead of string in foundry browser. Added a style that lets you bump down a check box when aligned next to a normal label / input.

--- a/core/admin/css/main.css
+++ b/core/admin/css/main.css
@@ -123,6 +123,7 @@
 	fieldset { margin: 0 0 15px 0; overflow: hidden; }
 	fieldset:last-child { margin: 0; }
 	fieldset p { user-select: none; }
+	fieldset.checkbox_bump { padding: 31px 0 0 0; }
 
 	label { color: #666; display: block; font-size: 13px; line-height: 1; margin: 0 0 10px 0; user-select: none; }
 	label small { color: #999; font-size: 11px; margin: 0 0 0 5px; }
